--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,16 +3,18 @@
     margin: 0 auto;
 }
 
-
 .header {
-    font-size: 2.6rem;
-    font-weight: 300;
-    color: #fff;
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
+    /* border-radius: 5px; */
     padding: .5rem;
-    border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #80ebed;
+}
+
+.header h1 {
+    font-size: 3.6rem;
+    font-weight: 400;
+    color: #fff;
 }
