--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,5 +24,10 @@
 @media only screen and (max-width: 600px) {
     .container {
         padding-top: 0;
+        max-width: 100%;
+    }
+
+    .header {
+        border-radius: 0;
     }
 }
