--- a/src/css/TodosForm.css
+++ b/src/css/TodosForm.css
@@ -109,6 +109,8 @@
 /*/////////////////////// Responsive /////////////////////////////*/
 
 
-/* @media only screen and (max-width: 600px) {
-    
-} */
+@media only screen and (max-width: 600px) {
+    .form__container {
+        border-radius: 0;
+    }
+}
