--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,3 @@
-.app {
-    max-width: 100%;
-}
-
 .container {
     padding-top: 3rem;
     max-width: 90%;
@@ -25,6 +21,10 @@
 }
 
 .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     font-size: 1.4rem;
     background-color: #111;
     color: #f8f8f8;
