--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,14 @@
+.app {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .container {
     padding-top: 3rem;
     max-width: 90%;
-    margin: 0 auto;
+    margin-left: 5%;
 }
 
 .header {
@@ -21,10 +28,6 @@
 }
 
 .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
     font-size: 1.4rem;
     background-color: #111;
     color: #f8f8f8;
